crates/keron-lang/tests/corpus/errors/check/map_with_symlink_key.keron

val m: Map<Symlink, Int> = {}